fix: 高度、overflow

--- a/packages/editor/src/app.less
+++ b/packages/editor/src/app.less
@@ -1,6 +1,10 @@
+body {
+  overflow: hidden!important;
+}
+
 .ccms-config {
   position: relative;
-  height: calc(100vh - 160px);
+  height: 100vh;
   min-height: 478px;
 
   & > .preview {
